# reviewe-rs

./: .env.example  Cargo.toml  docker-compose.yml
backend/: Cargo.toml
backend/src/: main.rs
migrations/: 20250108232258_initial.down.sql  20250108232258_initial.up.sql
openfoodfacts/: Cargo.toml
openfoodfacts/src/: lib.rs  types.rs
ui/: Cargo.toml
ui/src/: lib.rs  scanner.rs
web/: Cargo.toml
web/src/: main.rs
web/src/views/: home.rs
