[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "server",
    "openfoodfacts"
]

[workspace.dependencies]
dioxus = { version = "0.6.0", features = ["router"] }

# workspace
ui = { path = "ui" }
server = { path = "server" }
openfoodfacts = { path = "openfoodfacts" }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
