[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true}
dioxus-html = { version = "0.6.2", features = ["file_engine"] }
image = "0.25.5"
rxing = { version = "0.7.1", features = ["wasm_support"] }
server = { workspace = true }
serde_json = "1.0"
reqwest = {version = "0.12", features = ["blocking", "json"]}